--- a/NodumVisualCalculator/wwwroot/css/site.css
+++ b/NodumVisualCalculator/wwwroot/css/site.css
@@ -216,3 +216,24 @@ body {
     .dropdown-content-element:hover {
         background-color: #363636;
     }
+
+
+/* The Modal (background) */
+.modal-background {
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    margin-top: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
