Created NodeSerializer and Renamed namespace

--- a/NodumVisualCalculator/_Imports.razor
+++ b/NodumVisualCalculator/_Imports.razor
@@ -9,5 +9,5 @@
 @using NodumVisualCalculator.Pages
 @using NodumVisualCalculator.Components
 @using BlazorDraggableWindow
-@using Nodum.Node
+@using Nodum.Core
 @using NodumVisualCalculator.Data
