--- a/NodumVisualCalculator/_Imports.razor
+++ b/NodumVisualCalculator/_Imports.razor
@@ -10,4 +10,5 @@
 @using NodumVisualCalculator.Components
 @using BlazorDraggableWindow
 @using Nodum.Core
+@using Nodum.Calc
 @using NodumVisualCalculator.Data
