--- a/NodumVisualCalculator/Components/NodePinCreatorComponent.razor
+++ b/NodumVisualCalculator/Components/NodePinCreatorComponent.razor
@@ -68,7 +68,7 @@
         if (_currentVisualNode != null)
         {
             bool isInvokeUpdate = _isInput && !_isOutput;
-            NodePinOptions options = new NodePinOptions() { IsInput = _isInput, IsOutput = _isOutput, IsInvokeUpdate = isInvokeUpdate };
+            NodePinOptions options = new NodePinOptions() { IsInput = _isInput, IsOutput = _isOutput, IsInternalInput = _isOutput, IsInternalOutput = _isInput, IsInvokeUpdate = isInvokeUpdate };
             NodePin nodePin = NodeBuilder.BuildNodePin(_nodePinName, _currentVisualNode.Node, typeof(double), options);
             _currentVisualNode.AddVisualNodePin(nodePin);
         }
