Moved all BuildNodePin methods to class NodePinBuilder

--- a/NodumVisualCalculator/Components/NodePinCreatorComponent.razor
+++ b/NodumVisualCalculator/Components/NodePinCreatorComponent.razor
@@ -69,7 +69,7 @@
         {
             bool isInvokeUpdate = _isInput && !_isOutput;
             NodePinOptions options = new NodePinOptions() { IsInput = _isInput, IsOutput = _isOutput, IsInternalInput = _isOutput, IsInternalOutput = _isInput, IsInvokeUpdate = isInvokeUpdate };
-            NodePin nodePin = NodeBuilder.BuildNodePin(_nodePinName, _currentVisualNode.Node, typeof(double), options);
+            NodePin nodePin = NodePinBuilder.BuildNodePin(_nodePinName, _currentVisualNode.Node, typeof(double), options);
             _currentVisualNode.AddVisualNodePin(nodePin);
         }
 
