Renamed NodeBuilder to NodeCacher and moved CloneNode method to Node class

--- a/NodumVisualCalculator/Components/MainNodeComponent.razor
+++ b/NodumVisualCalculator/Components/MainNodeComponent.razor
@@ -48,7 +48,7 @@
         <div class="main-node-body">
 
             <Sidebar @ref="_mainSidebar">
-                @foreach (var group in NodeBuilder.AllBaseNodes)
+                @foreach (var group in NodeCacher.AllBaseNodes)
                 {
                     <SidebarTab>
                         <SidebarTabHeader>
